# DayOfBuy

./: .gitignore
client/: Makefile.am  configure.ac
client/src/: client.cc  client.h  config.cc  config.h  dialog-new_user.cc  dialog-new_user.h  dialog-preferences.cc  dialog-preferences.h  main.cc  user.cc  user.h  win-main.cc  win-main.h  win-preferences.cc  win-preferences.h
server/: Makefile  Makefile.am  Makefile.in  configure.ac
server/src/: config.h  database.cc  database.h  main.cc  server.cc  server.h  user.cc  user.h
shared/: message.h
